@@ -7,6 +7,7 @@ Version 1.11.13+dev:
    * Updated translations:
  * Miscellaneous and bug fixes:
    * Fix bug stopping drag+drop for unit movements
+   * Revert premoved units selection to Wesnoth 1.10 behavior (#21448)
 
    
 Version 1.11.13:
